# macbook-ai

./: .gitignore  CLAUDE.md  PUBLISHING.md  README.md  SECURITY.md  pyproject.toml
.github/workflows/: publish.yml
macbook_ai/: __init__.py  _exceptions.py
macbook_ai/foundation/: __init__.py  model.py
macbook_ai/stt/: __init__.py  recognizer.py
macbook_ai/tts/: __init__.py  synthesizer.py
tests/: conftest.py  test_exceptions.py  test_foundation.py  test_stt.py  test_tts.py
