[project]
name = "macbook-ai"
version = "0.1.7"
description = "Python interface to macOS AI capabilities"
readme = "README.md"
license = { text = "MIT" }
authors = [{ name = "Sagar" }]
keywords = ["macos", "speech", "ai", "stt", "apple", "foundation-models"]
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: MacOS",
    "Topic :: Multimedia :: Sound/Audio :: Speech",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
requires-python = ">=3.10"
dependencies = [
    "pyobjc-framework-Cocoa>=10.3",
    "pyobjc-framework-Speech>=10.3",
    "pyobjc-framework-AVFoundation>=10.3",
]

[project.urls]
Homepage = "https://github.com/sagrd/macbook-ai/"

[project.optional-dependencies]
# foundation extra will be added once pyobjc-framework-FoundationModels is on PyPI (macOS 15.6+)
dev = ["pytest>=8", "pytest-asyncio>=0.24"]

[dependency-groups]
dev = ["pytest>=8", "pytest-asyncio>=0.24"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["macbook_ai"]

[tool.pytest.ini_options]
asyncio_mode = "auto"

[tool.uv]
package = true
